# sauron-bot

./: .gitignore  README.md  config.ini.example  default.nix  pyproject.toml  requirements.txt  sauron_bot.py  start.sh  sys_info.py  telegram.py  telegram_bot.py  utils.py
.github/workflows/: python-app.yml
config/: config.ini.example
sauron/: cli.py  service.py  telegram.py  types.py  utils.py
tests/: test_get_producer_status.py  test_service.py
